# DNDK

./: CMakeLists.txt  spells.json
src/: dndk.cpp  dndk.h  dndk.ui  main.cpp
src/game/: game_rules.cpp  game_rules.hpp  resources.hpp
src/game/structs/: game_board.hpp  item.hpp  spell.hpp  unit.hpp
